--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,10 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/material": "^6.2.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-hook-form": "^7.54.0",
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.6",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
