--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,9 +15,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.1",
+    "fs": "^0.0.1-security",
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0"
   }
