--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.54.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.6",
+    "swiper": "^11.2.0",
     "yup": "^1.5.0"
   },
   "devDependencies": {
