--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,9 +22,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.6",
-    "swiper": "^11.2.0",
+    "swiper": "^11.2.1",
     "yup": "^1.5.0"
   },
   "devDependencies": {
