--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
